# rede_social_python

./: .gitignore  README.md  compose.yml  dockerfile  pyproject.toml
src/api/: ._authentication.py  application.py  authentication.py  configuration.py
src/api/dtos/: posts.py  users.py
src/api/exceptions/: user.py
src/api/routes/: home.py  post.py  users.py
src/datalayer/models/: base.py  post.py  user.py
src/services/: post.py  user.py
